--- a/app/src/public/styles.css
+++ b/app/src/public/styles.css
@@ -18,16 +18,15 @@ header {
 
 /*Height of columns*/
 .column {
-    min-height: 550px;             /* ensure columns have some height */
+    min-height: 1000px;             /* ensure columns have some height */
 }
 
 /*Left column*/
 .column.side {
-    width: 20%;
+    width: 15%;
     float: left;
     background-color: #9da6ae;
     padding: 10px;
-    border-radius: 8px;
 }
 
 /*Middle column*/
@@ -35,7 +34,8 @@ header {
     width: 75%;
     float: left;
     padding: 10px;
-    border-radius: 8px;
+
+    align-items: center;
 }
 
 #home {
@@ -65,6 +65,22 @@ footer {
     width: 100%;
 }
 
+/* Container */
+.container {
+    padding: 20px 30px;
+    background: #f8f9fa;
+    border-top: 1px solid #e9ecef;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 8px;
+}
+
+/* Option */
+select {
+    padding: 5px 10px;
+    border-radius: 4px;
+}
+
 /* Stats Display */
 .stats {
     padding: 20px 30px;
@@ -73,6 +89,7 @@ footer {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
+    border-radius: 8px;
 }
 
 .stat-item {
@@ -99,9 +116,10 @@ footer {
 
 button {
     text-align: center;
-    padding: 5px;
+    padding: 5px 10px;
     font-size: 16px;
     font-weight: 700;
     color: #667eea;
     margin-bottom: 5px;
+    border-radius: 8px;
 }
